...

            SampleActionRow {
                Button(
                    onClick = { state.selectDuration(90.minutes, workoutItems) },
                    modifier = Modifier.fillMaxWidth()
                ) {
                    Text("Set 90 min")
                }
                OutlinedButton(
                    onClick = { state.selectDuration(45.minutes, workoutItems) },
                    modifier = Modifier.fillMaxWidth()
                ) {
                    Text("Reset 45 min")
                }
            }

            Spacer(modifier = Modifier.height(8.dp))

            Text(
...
