...
                            dateTime = LocalDateTime(2026, 3, 1, 0, 30),
                            items = items
                        )
                    },
                    modifier = Modifier.fillMaxWidth()
                ) {
                    Text("Set Mar 1, 00:30 programmatically")
                }
                OutlinedButton(
                    onClick = {
                        state.selectDateTime(
                            dateTime = initialDateTime,
                            items = items
                        )
                    },
                    modifier = Modifier.fillMaxWidth()
                ) {
                    Text("Reset Feb 28, 23:30")
                }
            }

            Spacer(modifier = Modifier.height(8.dp))

            Text(
...
