...
                            ),
                            items = items
                        )
                    },
                    modifier = Modifier.fillMaxWidth()
                ) {
                    Text("Set 2 kg programmatically")
                }
                OutlinedButton(
                    onClick = {
                        state.selectSelection(
                            selection = QuantityUnitSelection(
                                quantity = 2_500,
...
                            ),
                            items = items
                        )
                    },
                    modifier = Modifier.fillMaxWidth()
                ) {
                    Text("Reset 2,500 g")
                }
            }

            Spacer(modifier = Modifier.height(8.dp))

            Text(
...
